# windguru-archive-browser

./: .clauderules  .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  todos.md  windguru.py
.claude/: instructions.md
.github/workflows/: ci.yml
src/: __init__.py
src/cli/: __init__.py  app.py  formatter.py  prompts.py
src/config/: __init__.py  constants.py  settings.py
src/models/: __init__.py  archive.py  auth.py  spot.py  weather.py
src/services/: __init__.py  archive_service.py  auth_service.py  credential_storage.py  spot_service.py  visualization_service.py
src/tui/: __init__.py  app.py
src/utils/: __init__.py  date_utils.py  file_utils.py  stats_utils.py
tests/: __init__.py  test_cli.py  test_credential_storage.py  test_credential_validation.py  test_models.py  test_services.py  test_utils.py
